[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "energyplus_api_helpers"
version = "0.4.0"
description = "A set of helper classes, functions and demos, for interacting with the EnergyPlus Python API"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "energyplus_launch", "ep_launch",
    "EnergyPlus", "eplus", "Energy+",
    "Building Simulation", "Whole Building Energy Simulation",
    "Heat Transfer", "HVAC", "Modeling",
]
license = {file = "License.txt"}
authors = [
    {name = 'Edwin Lee, for NREL, for the United States Department of Energy'},
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
]
dependencies = [
    "matplotlib", "flask", "pysparklines", "asciichartpy"
]


[tool.setuptools]
packages = ["energyplus_api_helpers", "energyplus_api_helpers.demos"]

[tool.setuptools.package-data]
energyplus_api_helpers= ["*.html"]

[project.urls]
homepage = "https://github.com/Myoldmopar/EnergyPlusAPIHelper"
#documentation = "https://docs.scipy.org/doc/scipy/"
source = "https://github.com/Myoldmopar/EnergyPlusAPIHelper"
#download = "https://github.com/scipy/scipy/releases"
tracker = "https://github.com/Myoldmopar/EnergyPlusAPIHelper/issues"

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "build", "pre-commit"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = "True"
check_untyped_defs = "True"
